--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "markdown-to-pug-cli": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deployMd": "devTools/deployMd.sh"
   },
   "repository": {
     "type": "git",
